# taller-copilot-02

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/src/: App.jsx  index.css
